--- a/maddi_app/templates/includes/navigation.html
+++ b/maddi_app/templates/includes/navigation.html
@@ -31,10 +31,11 @@
                 <div class="dropdown-menu dropdown-menu-right">
                   <div class="py-1">
                     <a href="{% url 'profile' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem">Profile</a>
-                    {% if not user.is_staff and not user.is_superuser %}
-                      <a href="{% url 'cart' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem">Cart</a>
-                    {% endif %}
-                  </div>
+                      {% if not user.is_staff and not user.is_superuser %}
+                        <a href="{% url 'cart' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem">Cart</a>
+                      {% endif %}
+                      <a href="{% url 'purchase' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem">Purchase</a>
+                    </div>
                   <div class="dropdown-divider"></div>
                   <div class="py-1">
                     <a href="{% url 'logout' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem">Logout</a>
